# jmullan.cmd

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-package.yml
src/jmullan/cmd/: auto_config.py  cmd.py  requests_handle.py
src/jmullan_cmd/: auto_config.py  cmd.py  requests_handle.py
tests/: demo.py  test_auto_config.py  test_cmd.py
