[project]
name = "jmullan.cmd"
version = "1.0.0"
description = "Easily write your python script"
authors = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"}
]
maintainers = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"}
]
classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli"]
dependencies = [
    'requests',
    "jmullan.logging@git+https://github.com/jmullan/jmullan.logging"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pip",
    "pre-commit",
    "pytest",
    "ruff",
    "uv"
]

[project.urls]
homepage = "https://github.com/jmullan/jmullan.cmd"
documentation = "https://github.com/jmullan/jmullan.cmd"
repository = "https://github.com/jmullan/jmullan.cmd"


[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# Linter settings
[tool.ruff]
line-length = 120
lint.select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I"   # isort
]

[tool.ruff.lint.isort]
known-local-folder = ["src"]
section-order = ["future", "standard-library", "third-party", "internal", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
internal = ["jmullan.logging"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
